# signalos-app

./: .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  MEMORY.md  PORTING_MAP.md  README.md  SIGNING.md  index.html  package-lock.json  package.json  pyproject.toml  signalos-v2.html  vite.config.ts
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: nightly-deep-validation.yml  pages.yml  release.yml  smoke.yml  test-automation.yml  windows-installer.yml
.signalos/: AUDIT_TRAIL.jsonl
distribution/internal/: attestation-63deb92.json  attestation-73ad295.json
distribution/landing/: index.html
distribution/update-manifest/: beta.json  latest.json
docs/: CLEAN_MACHINE_VALIDATION.md  DEEP_REVIEW_AS_END_USER_2026-05-14.md  ENTERPRISE_SAAS_FULL_SDLC_IMPLEMENTATION_PLAN.md  FINDINGS_VALIDATION_2026-06.md  FIXES_LOG.html  FIXES_LOG.md  FOUNDRY_MULTI_USER_MULTI_TENANT_PLAN.md  FOUNDRY_OPPORTUNITY_VALIDATION_LIFECYCLE_PLAN.md  FRONTEND_CONVENTIONS.md  GATE-REOPEN-DESIGN.md  GOVERNED_FLEET_RUNTIME_DESIGN.md  GOVERNED_PRODUCT_LIFECYCLE_IMPLEMENTATION_PLAN.md  INTERNAL_TESTING_BUILD.md  MECHANICAL-VERIFICATION.md  PRODUCT_DELIVERY_BRIDGE_IMPLEMENTATION_PLAN.md  PROVIDER_VALIDATION_GUIDE.md  RELEASE_GATES_RUNBOOK.md  RELEASE_OPERATOR_GUIDE.md  ROADMAP_BIG_FEATURES.md  SIGNALOS_FACTORY_GOVERNANCE_IMPLEMENTATION_PLAN.md  SIGNALOS_GITHUB_OAUTH_SETUP.md  SIGNALOS_INSTALLED_APP_REFERENCE_REVIEW.md  SIGNALOS_NET_CONCEPT_PARITY_AUDIT.md  SYSTEM-AUDIT-AND-COMPLETION-PLAN-2026-05-20.md  SYSTEM-AUDIT-AND-COMPLETION-PLAN-v0.2-2026-05-20.md  USER_GUIDE.md  V4_GOVERNED_AGENT_LOOP_PLAN.md  WAVE-ENGINE-DESIGN.md  WIRING_AUDIT.md  foundry-v4-tracker.html  onboarding-tour.html
docs/brand/: APPROVED_BRAND_ASSETS.md  approved-assets-preview.html  foundry-logo-preview.html
docs/release-evidence/: ci-release-0.0.7-beta.md  installed-runtime-local.md  live-providers-local.md  release-urls-local.md  release-urls-remote.md
docs/test-automation/: 00-INDEX.md  01-UNIT-COMPONENT-TESTING.md  02-API-INTEGRATION-TESTING.md  03-CONTRACT-TESTING.md  04-E2E-UI-TESTING.md  05-VISUAL-REGRESSION-TESTING.md  06-PERFORMANCE-TESTING.md  07-SECURITY-TESTING.md  08-CHAOS-RESILIENCE-TESTING.md  09-PRODUCTION-MONITORING.md  10-TEST-DATA-MANAGEMENT.md  11-PIPELINE-INTEGRATION.md  12-METRICS-GOVERNANCE.md
e2e/: README.md  user-journey.smoke.mjs
python/: VENDORED_CORE.md  conftest.py  signalos_attachments.py  signalos_ipc_server.py  signalos_secret_guard.py  test_acceptance_verifiability.py  test_adoption_init.py  test_agent_dispatch_parallel.py  test_agent_ipc.py  test_agent_ipc_boundaries.py  test_agent_loop_containment_holes.py  test_app_visible_command_wiring.py  test_artifacts.py  test_audit_chain.py  test_audit_project_binding.py  test_audit_replay.py  test_backend_matrix_driver.py  test_backend_matrix_oracle.py  test_belief_resolution.py  test_blueprint_match_threshold.py  test_blueprint_saas_billing.py  test_blueprint_ux_surface_leak.py  test_briefs.py  test_brownfield.py  test_budget_hardstop.py  test_bundle_command.py  test_capability_contract.py  test_cassette_replay.py  test_ceremony_commands.py  test_chunked_dispatch.py  test_cli_entrypoint.py  test_competitor.py  test_completeness.py  test_constitution.py  test_cost_command.py  test_critique_routing.py  test_cross_file_cohesion.py  test_defer.py  test_delimiter_balance.py  test_deliver_command_profile_selection.py  (+173 more)
python/signalos_lib/: __init__.py  _worktree_state.py  adoption.py  agent_loader.py  artifacts.py  audit_replay.py  brain.py  browser.py  campaign.py  catalog.py  cli.py  context.py  data_privacy.py  deploy.py  design.py  devex.py  diagnose.py  e2e_runner.py  fleet_runtime.py  gate_artifacts.json  git_process.py  git_remote.py  harness.py  health.py  ide.py  intent.py  investigate.py  model_router.py  oidc_provider.py  orchestrator.py  panel.py  pause.py  plan.py  postgres_task_store.py  preamble.py  projects.py  qa_runner.py  refusal_taxonomy.py  registry.py  regression.py  (+23 more)
scripts/: build-internal.ps1  build-internal.sh  bundle-sidecar.ps1  bundle-sidecar.sh  check-installed-artifact-preconditions.ps1  ensure-sidecar.ps1  ensure-sidecar.sh  generate_icons.py  patch-zimmerframe.js  pyi-rthook-tiktoken.py  smoke-installed-build.ps1  sync_consult_panel.py  test-gates.ps1  test-gates.sh  test-installer.ps1  test-installer.sh  update-manifest.sh  v4-live-smoke.py  validate-installed-runtime.ps1  validate-live-providers.ps1  validate-release-urls.ps1  validate-rustsec-exceptions.py  validate-tauri-acl.py  verify-release.ps1
scripts/backend_matrix/: README.md  ci_policy.json  driver.py  models.json  windows_job_bootstrap.py
src/: app.test.tsx  app.tsx  app.view-shell.test.tsx  enforcementView.test.ts  enforcementView.ts  global.d.ts  index.html  main.tsx  policyView.test.ts  policyView.ts  state.ts  styles.css  test-setup.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: audit.toml  rustsec-exceptions.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: workspace-core.toml
src-tauri/src/: enforcement.rs  governance.rs  ipc.rs  keychain.rs  lib.rs  main.rs  provider.rs  runtime.rs  sandbox.rs  sidecar.rs  test_automation.rs
src/components/: AddSecretModal.tsx  AuditTimeTravel.test.tsx  AuditTimeTravel.tsx  ChatBubbleSystem.reopen.test.tsx  ChatBubbleSystem.test.tsx  ChatBubbleSystem.tsx  ChatPreviewBubble.test.tsx  ChatPreviewBubble.tsx  CompetitorPanel.test.tsx  CompetitorPanel.tsx  ExitModal.tsx  FileDiffBubble.test.tsx  FileDiffBubble.tsx  FoundryMark.tsx  GateReviewCard.test.tsx  GateReviewCard.tsx  GateTimeline.reopen.test.tsx  (+35 more)
src_old/: index.html
(+727 files in other folders)
