[package]
name    = "signalos-desktop"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "signalos_desktop_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = [] }
tauri-plugin-shell      = "2"
tauri-plugin-opener     = "2"
tauri-plugin-process    = "2"
tauri-plugin-updater    = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs         = "2"
tauri-plugin-dialog     = "2"

# OS keychain — macOS Keychain / Windows Credential Manager / libsecret on Linux
keyring = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
log         = "0.4"
env_logger  = "0.11"

# HTTP client for fetching live model lists from provider APIs
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[features]
# Enable custom protocol for asset serving
custom-protocol = ["tauri/custom-protocol"]
