[package]
name    = "signalos-desktop"
version = "3.2.3-internal.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "signalos_desktop_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = [] }
tauri-plugin-shell      = "2"
tauri-plugin-opener     = "2"
tauri-plugin-process    = "2"
tauri-plugin-updater    = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs         = "2"
tauri-plugin-dialog     = "2"

# OS keychain — macOS Keychain / Windows Credential Manager / libsecret on Linux
keyring = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
log         = "0.4"
env_logger  = "0.11"

# HTTP client for fetching live model lists from provider APIs
reqwest     = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Server-side redaction for exported reports (Wave 1 / G0-5)
regex       = "1"

# Streaming AI tokens (Wave 5 closeout §11.5/9)
tokio-util  = { version = "0.7", features = ["io"] }
futures-util = "0.3"

[features]
# Enable custom protocol for asset serving
custom-protocol = ["tauri/custom-protocol"]

# ── Temporary supply-chain fix (RUSTSEC-2026-0194 / 0195) ──────────────────
# plist 1.9.0 (latest release) pins quick-xml ^0.39.2, which blocks the fixed
# quick-xml 0.41.0 and leaves both advisories live in `cargo audit`. Rather than
# suppress them, point plist at the real upstream fix: PR ebarnard/rust-plist#191
# ("Bump quick-xml to 0.41"), pinned to an immutable commit. This uses the actual
# fixed code, not an audit ignore. REMOVE once plist publishes a release that
# depends on quick-xml >=0.41 (tracked; then `cargo update -p plist`).
[patch.crates-io]
plist = { git = "https://github.com/cf-rhett/rust-plist", rev = "f2e60cdc3423e1d49a3202a719aa726694068bc4" }
